<resources>
    <string name="app_name">Pak Uganda</string>
    <string name="learnmore">Learn more about us from our website www.pakug.com</string>
    <string name="continue_agree">By continuing, you indicate that you agree to our terms &amp; condition involved</string>
    <string name="title_home">Home</string>
    <string name="title_search">Needs</string>
    <string name="title_library">Settings</string>
    <string name="analyze">Map</string>
    <string name="title_events">Activities</string>
    <string name="google_maps_key">AIzaSyC1f3koudcFIxEA0LzRsnox3hm1ZaXdqCQ</string>
    <string name="i_am_here">Me</string>
    <string name="provider_failed">Error, Location is off</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_msg_unknown">unknown Error</string>
    <string name="error_msg_no_internet">No Internet Connection</string>
    <string name="error_msg_timeout">Timeout Error</string>
</resources>