<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/malhome"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/malanalyze"
        android:title="@string/analyze" />
    <item
        android:id="@+id/navigation_podcast"
        android:enabled="true"
        android:icon="@drawable/report"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_events"
        android:enabled="true"
        android:icon="@drawable/malnotification"
        android:title="@string/title_events" />
    <item
        android:id="@+id/navigation_library"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/title_library" />

</menu>